# Python

TaskManager/: Task_Manager_with_user_authentication.docx  pyproject.toml
TaskManager/task_manager/: __init__.py  add_task.py  config.py  delete_task.py  main.py  mark_task.py  task_menu.py  userauth.py  view_task.py
budget_tracker/: Personal_expense_tracker.docx  pyproject.toml
budget_tracker/src/monthly_expense_tracker/: __init__.py  add_expenses.py  config.py  load_expenses.py  main.py  save_expenses.py  track_budget.py  view_expenses.py
test-cli/: pyproject.toml
test-cli/src/task_cli/: __init__.py  cli.py  tasks.py
test-cli/tests/: test_cli.py
