[project]
name = "monthly-expense-tracker"
version = "1.0.0"
description = "A simple monthly expense tracker application"
authors = [
    {name = "Prasanthi"}
]
requires-python = ">=3.9"
dependencies = [
    "tabulate>=0.9.0"
]

[project.scripts]
expense-tracker = "monthly_expense_tracker.main:main"